Reenable technology_description input in edit_technologies

--- a/templates/edit_technology.html
+++ b/templates/edit_technology.html
@@ -55,7 +55,7 @@
                     <i class="material-icons prefix purple-text text-darken-3">description</i>
                     <textarea id="technology_description" name="technology_description" minlength="5" maxlength="300"
                         placeholder="Brief desciption, less than 300 characters!" class="materialize-textarea validate"
-                        disabled>{{ technology.technology_description }}!</textarea>
+                        required>{{ technology.technology_description }}!</textarea>
                     <label for="technology_description">Description</label>
                 </div>
             </div>
