--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,22 @@ body {
     background-color:#fb91db;
 } 
 
+
+h2 {
+    font-size: 2rem;
+}
+
+.general-title {
+    font-size: 4rem;
+}
+
+/*-- Home page styling --*/
+.page-topper  {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 2rem;
+    margin: 100px 0;
+}
+
 .select-wrapper input.select-dropdown {
     font-family: 'Ubuntu Mono', monospace;
 }
@@ -30,11 +46,7 @@ body {
     color: #fff;
 }
 
-.page-topper  {
-    font-family: 'Press Start 2P', cursive;
-    font-size: 2rem;
-    margin: 100px 0;
-}
+
 
 /*-- Backgorund colour of sidenav to match site --*/
 
