--- a/templates/base.html
+++ b/templates/base.html
@@ -1,98 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="A site about obsolete technologies" />
+        <meta name="keywords" content="technology technologies machines obsolete vintage old" />
+        <meta name="author" content="Conac Breslin for educational purposes" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" type="text/css" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css" />
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
+        <title>Technostalgia</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
-        type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-    {% block styles %}
-    {% endblock %}
-    <title>Technostalgia</title>
-</head>
+    <body>
+        <header>
+            <!-- Main navbar using Materialize.com  -->
+            <nav class="nav-extended purple lighten-1" id="page-top">
+                <div class="nav-wrapper">
+                    <a href="{{ url_for('home') }}" class="brand-logo">Technostalgia</a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i class="material-icons prefix">dehaze</i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
 
-<body>
-    <header>
+                        <!-- Only show these links to logged in users -->
+                        {% if session.user %}
+                        <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                        <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
+                        {% if session.is_admin == True %}
+                        <li><a href="{{ url_for('manage_categories') }}">Manage the site</a></li>
+                        {% endif %}
+                        <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                        {% else %}
 
-        <!-- Main navbar using Materialize.com  -->
-        <nav class="nav-extended purple lighten-1" id="page-top">
-            <div class="nav-wrapper">
-                <a href="{{ url_for('home') }}" class="brand-logo">Technostalgia</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
-                        class="material-icons prefix">dehaze</i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
+                        <li><a href="{{ url_for('login') }}">Log In</a></li>
+                        <li><a href="{{ url_for('registration') }}">Register</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </nav>
 
-                    <!-- Only show these links to logged in users -->
-                    {% if session.user %}
-                    <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-                    <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
-                    {% if session.is_admin == True %}
-                    <li><a href="{{ url_for('manage_categories') }}">Manage the site</a></li>
-                    {% endif %}
-                    <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-                    {% else %}
+            <!-- Collapsed navbar code from Materialize.com -->
+            <ul class="sidenav" id="mobile-demo">
+                <li>
+                    <p class="center-align">Technostalgia<p></p>
+                </li>
 
-                    <li><a href="{{ url_for('login') }}">Log In</a></li>
-                    <li><a href="{{ url_for('registration') }}">Register</a></li>
-                    {% endif %}
-                </ul>
+                <!-- Show this links to all visitors to site -->
+                <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
+
+                <!-- Only show these links to logged in users -->
+                {% if session.user %}
+                <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
+                <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
+
+                <!-- Only show this link to logged in users -->
+                {% if session.user|lower == "admin"|lower %}
+                <li><a href="{{ url_for('manage_categories') }}">Manage the site</a></li>
+                {% endif %}
+                <li><a href="{{ url_for('logout') }}">Log Out</a></li>
+                {% else %}
+                <li><a href="{{ url_for('login') }}">Log In</a></li>
+                <li><a href="{{ url_for('registration') }}">Register</a></li>
+                {% endif%}
+            </ul>
+        </header>
+
+        <section>
+            <!-- Place to display flash messages -->
+            {% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
+            <div class="row flashes">
+                <h4 class="purple lighten-1 center-align">{{ message }}</h4>
             </div>
-        </nav>
+            {% endfor %} {% endif %} {% endwith %}
+        </section>
 
-        <!-- Collapsed navbar code from Materialize.com -->
-        <ul class="sidenav" id="mobile-demo">
-            <li>
-                <h4 class="center-align">Technostalgia</h4>
-            </li>
+        <main class="container">
+            {% block content %} {% endblock %}
+        </main>
 
-            <!-- Show this links to all visitors to site -->
-            <li><a href="{{ url_for('get_technologies') }}">View Technologies</a></li>
-
-            <!-- Only show these links to logged in users -->
-            {% if session.user %}
-            <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
-            <li><a href="{{ url_for('add_technology') }}">Add a Technology</a></li>
-
-            <!-- Only show this link to logged in users -->
-            {% if session.user|lower == "admin"|lower %}
-            <li><a href="{{ url_for('manage_categories') }}">Manage the site</a></li>
-            {% endif %}
-            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-            {% else %}
-            <li><a href="{{ url_for('login') }}">Log In</a></li>
-            <li><a href="{{ url_for('registration') }}">Register</a></li>
-            {% endif%}
-        </ul>
-    </header>
-
-    <section>
-        <!-- Place to display flash messages -->
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-        {% for message in messages %}
-        <div class="row flashes ">
-            <h4 class="purple lighten-1 center-align">{{ message }}</h4>
-        </div>
-        {% endfor %}
-        {% endif %}
-        {% endwith %}
-    </section>
-
-    <main class="container">
-        {% block content %}
-        {% endblock %}
-    </main>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    {% block scripts %}
-    {% endblock %}
-</body>
-
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+        {% block scripts %} {% endblock %}
+    </body>
 </html>
