--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 
 <div class="row">
     <div class="col s12">
-        <h4 class="center-align">{{ page_title }}</h4>
+        <h1 class=" general-title center-align">{{ page_title }}</h1>
     </div>
 
     <!-- Form for logging in -->
