Save formatted log in page

--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -3,7 +3,7 @@
 
 <div class="row" id="technologies-top">
   <div class="col s12">
-    <h4 class="center-align" id="technologies-top">You can filter your search by keyword or category</h4>
+    <h1 class="center-align general-title" id="technologies-top">You can filter your search by keyword or category</h1>
   </div>
 </div>
 
