--- a/templates/login.html
+++ b/templates/login.html
@@ -3,19 +3,17 @@
 
 <div class="row">
     <div class="col s12">
-        <h1 class=" general-title center-align">{{ page_title }}</h1>
+        <h1 class="general-title center-align">{{ page_title }}</h1>
     </div>
 
     <!-- Form for logging in -->
     <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('login') }}">
         <div class="card-panel">
-
             <!-- Input element for username -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix purple-text text-darken-3">face</i>
-                    <input id="username" name="username" type="text" minlength="4" maxlength="15"
-                        pattern="^[a-zA-Z0-9]{4,15}$" class="validate" required>
+                    <input id="username" name="username" type="text" minlength="4" maxlength="15" pattern="^[a-zA-Z0-9]{4,15}$" class="validate" required />
                     <label for="username">Username</label>
                 </div>
             </div>
@@ -24,8 +22,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix purple-text text-darken-3">lock</i>
-                    <input id="password" name="password" type="password" minlength="5" maxlength="15"
-                        pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required>
+                    <input id="password" name="password" type="password" minlength="5" maxlength="15" pattern="^[a-zA-Z0-9]{5,15}$" class="validate" required />
                     <label for="password">Password</label>
                 </div>
             </div>
@@ -33,12 +30,9 @@
             <!-- Submit button for log in -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
-                        Log In<i class="material-icons right">forward</i>
-                    </button>
-                    <div class="col s12 ">
-                        <p>If you have not yet joined us you can <a href="{{ url_for('registration') }}"
-                                class="btn-small waves-effect waves-light purple lighten-1">Register Here</a></p>
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">Log In<i class="material-icons right">forward</i></button>
+                    <div class="col s12">
+                        <p>If you have not yet joined us you can <a href="{{ url_for('registration') }}" class="btn-small waves-effect waves-light purple lighten-1">Register Here</a></p>
                     </div>
                 </div>
             </div>
