--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="row" id="technologies-top">
+<div class="row" id="page-top">
   <div class="col s12">
-    <h1 class="center-align general-title" id="technologies-top">You can filter your search by keyword or category</h1>
+    <h1 class="center-align general-title">You can filter your search by keyword or category</h1>
   </div>
 </div>
 
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
       <div class="col s12 m8">
-        <h5>or</h5>
+        <p><b>or</b></p>
       </div>
     </div>
     <div class="row">
