--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col s12">
-    <h4 class="center-align" id="top">{{ page_title }}</h4>
+    <h1 class="center-align general-title" id="top">{{ page_title }}</h1>
 
     <!-- Button to add a category -->
     <div class="row">
@@ -15,7 +15,7 @@
     </div>
     <div class="row">
       <div class="col s12 center-align">
-        <h4>Manage existing categories</h4>
+        <h2>Manage existing categories</h2>
       </div>
     </div>
 
@@ -37,7 +37,7 @@
       <!--  Delete category modal -->
       <div id="modal{{ category._id }}"" class=" modal">
         <div class="modal-content red">
-          <h4>Are you sure you want to delete this entire category?</h4>
+          <h3>Are you sure you want to delete this entire category?</h3>
           <p>The category, all its technologies and associated comments will be deleted and you will not be able to
             retrieve them</p>
         </div>
@@ -98,7 +98,7 @@
     <!--  Delete technology modal -->
     <div id="modal{{ technology._id }}" class="modal">
       <div class="modal-content purple lighten-5">
-        <h4>Are you sure you want to delete this technology?</h4>
+        <h3>Are you sure you want to delete this technology?</h3>
         <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
       </div>
       <div class="modal-footer center-align purple lighten-5">
