--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,12 +4,12 @@
 <div class="row">
     <div class="col s12 m8 offset-m2">
         <div class="card-panel">
-            <h3 class="center-align">
+            <h1 class="center-align" id="profile-name">
                 {{ username|capitalize }}'s Profile
-            </h3>
-            <h5 class="align-left">
+            </h1>
+            <h2 class="align-left">
                 Member since: {{ membersince }}
-            </h5>
+            </h2>
         </div>
     </div>
 </div>
@@ -31,15 +31,11 @@
                     </ul>
                 </div>
                 <div class="card-action purple lighten-5">
-                    <a href="{{ url_for('edit_technology', technology_id=technology._id) }}"
-                        class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
-                            class="material-icons right">edit</i>Edit this technology</a>
-                    <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
-                        href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete
-                        this technology</a>
-                    <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
-                        href="{{ url_for('comments', technology_id=technology._id) }}"><i
-                            class="material-icons right">add_circle_outline</i>Add a comment</a>
+                    <a href="{{ url_for('edit_technology', technology_id=technology._id) }}" class="waves-effect waves-light btn-small purple lighten-1 align-right"><i class="material-icons right">edit</i>Edit this technology</a>
+                    <a class="waves-effect waves-light btn-small purple lighten-1 align-right modal-trigger" href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete this technology</a>
+                    <a class="waves-effect waves-light btn-small purple lighten-1 align-right modal-trigger" href="{{ url_for('comments', technology_id=technology._id) }}">
+                        <i class="material-icons right">add_circle_outline</i>Add a comment
+                    </a>
                 </div>
             </div>
         </div>
@@ -51,21 +47,15 @@
                 <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
             </div>
             <div class="modal-footer center-align purple lighten-5">
-                <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain
-                    I want to delete this</a>
-                <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
-                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to
-                    safety</a>
+                <a href="{{ url_for('delete_technology', technology_id=technology._id) }}" class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to delete this</a>
+                <a href="{{ url_for('get_technologies', technology_id=technology._id) }}" class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to safety</a>
             </div>
         </div>
 
-        {% endfor %}
-        {% else %}
+        {% endfor %} {% else %}
         <div class="center-align">
             <h4>You haven't added any technologies yet</h4>
-            <a href="{{ url_for('add_technology') }}" class="waves-effect waves-light btn-small purple lighten-1"><i
-                    class="material-icons right">add_circle_outline</i>Add one now</a>
+            <a href="{{ url_for('add_technology') }}" class="waves-effect waves-light btn-small purple lighten-1"><i class="material-icons right">add_circle_outline</i>Add one now</a>
         </div>
         {% endif %}
     </div>
@@ -84,11 +74,8 @@
                     </ul>
                 </div>
                 <div class="card-action purple lighten-5">
-                    <a href="{{ url_for('edit_comment', comment_id=comment._id) }}"
-                        class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
-                            class="material-icons right">edit</i>Edit this comment</a>
-                    <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
-                        href="#modal{{ comment._id }}"><i class="material-icons right">close</i>Delete this comment</a>
+                    <a href="{{ url_for('edit_comment', comment_id=comment._id) }}" class="waves-effect waves-light btn-small purple lighten-1 align-right"><i class="material-icons right">edit</i>Edit this comment</a>
+                    <a class="waves-effect waves-light btn-small purple lighten-1 align-right modal-trigger" href="#modal{{ comment._id }}"><i class="material-icons right">close</i>Delete this comment</a>
                 </div>
             </div>
         </div>
@@ -100,13 +87,8 @@
                 <p>It will not be permanenetly deleted and you will not be able to retrieve it</p>
             </div>
             <div class="modal-footer center-align purple lighten-5">
-                <a href="{{ url_for('delete_comment', comment_id=comment._id) }}"
-                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain
-                    I want to delete this comment</a>
-                <a href="{{ url_for('profile', username=session['user']) }}"
-                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No,
-                    return to
-                    safety</a>
+                <a href="{{ url_for('delete_comment', comment_id=comment._id) }}" class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to delete this comment</a>
+                <a href="{{ url_for('profile', username=session['user']) }}" class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to safety</a>
             </div>
         </div>
         {% endfor %}
@@ -114,9 +96,7 @@
     {% else %}
     <div class="center-align">
         <h4>You haven't added any comments yet</h4>
-        <a href="{{ url_for('get_technologies') }}"
-            class="waves-effect waves-light btn-small purple lighten-1 align-right"><i
-                class="material-icons right">edit</i>Pick a technology to comment on</a>
+        <a href="{{ url_for('get_technologies') }}" class="waves-effect waves-light btn-small purple lighten-1 align-right"><i class="material-icons right">edit</i>Pick a technology to comment on</a>
     </div>
 </div>
 {% endif %}
