--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="row" id="page-top">
+<div class="row">
   <div class="col s12">
     <h1 class="center-align general-title">You can filter your search by keyword or category</h1>
   </div>
