--- a/templates/add_category.html
+++ b/templates/add_category.html
@@ -3,19 +3,17 @@
 
 <div class="row">
     <div class="col s12">
-        <h4 class="center-align">{{ page_title }}</h4>
+        <h1 class="center-align general-title">{{ page_title }}</h1>
     </div>
 
     <!-- Code for form from Materialize.com -->
     <form class="col s12" method="POST" action="{{ url_for('add_category') }}">
         <div class="card-panel">
-
             <!-- Input for adding a cateory name  -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix ">important_devices</i>
-                    <input id="category_name" name="category_name" minlength="2" maxlength="100" type="text"
-                        class="validate" placeholder="Name" required>
+                    <i class="material-icons prefix">important_devices</i>
+                    <input id="category_name" name="category_name" minlength="2" maxlength="100" type="text" class="validate" placeholder="Name" required />
                     <label for="category_name">New Category's name</label>
                 </div>
             </div>
@@ -23,15 +21,10 @@
             <!-- Submit button for adding a new category -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
-                        Add this new category now! <i class="material-icons right">add_circle_outline</i>
-                    </button>
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">Add this new category now! <i class="material-icons right">add_circle_outline</i></button>
 
                     <!-- Button to cancel all changes and return to manage_categories -->
-                    <a href="{{ url_for('manage_categories') }}"
-                        class="btn-large waves-effect waves-light purple lighten-1">
-                        Cancel <i class="material-icons right">close</i>
-                    </a>
+                    <a href="{{ url_for('manage_categories') }}" class="btn-large waves-effect waves-light purple lighten-1"> Cancel <i class="material-icons right">close</i> </a>
                 </div>
             </div>
         </div>
