--- a/templates/comments.html
+++ b/templates/comments.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col s12">
-    <h4 class="center-align" id="comment-top">{{ page_title }}</h4>
+    <h1 class="center-align general-title">{{ page_title }}</h1>
   </div>
 
   <!-- Card containing technology details -->
@@ -25,27 +25,14 @@
       </div>
     </div>
 
-    <!--  Modal -->
-    <div id="modal{{ technology._id }}" class="modal">
-      <div class="modal-content">
-        <h4>Are you sure you want to delete this item?</h4>
-        <p>The entire entry and all its comments will be deleted and you will not be able to retrieve them</p>
-      </div>
-      <div class="modal-footer center-align">
-        <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to
-          delete this</a>
-        <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
-          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to safety</a>
-      </div>
-    </div>
+   
   </div>
 </div>
 
 <!-- Form to add a comment -->
 <div class="row">
   <div class="col s12 center-align">
-    <h4 class="heading">Add a comment about {{ technology.technology_name }}</h4>
+    <h2 class="heading comment-sub-heading">Add a comment about {{ technology.technology_name }}</h2>
   </div>
 </div>
 <div class="row card-panel">
@@ -82,7 +69,7 @@
 <!-- Comments section-->
 <div class="row">
   <div class="col s12 center-align">
-    <h3>Comments</h3>
+    <h2 class="comment-sub-heading">Comments</h2>
   </div>
 </div>
 
@@ -92,7 +79,7 @@
   <div class="col s12">
     <div class="card">
       <div class="card-content ">
-        <h4 class="card-title">{{ comment.technology_name }}</h4>
+        <h2 class="card-title comment-sub-heading">{{ comment.technology_name }}</h2>
         <p>{{ comment.technology_comment }}</p>
         <p><em>Added by: {{ comment.author|capitalize }}</em></p>
         <p><em>Added on: {{ comment.created_on }}</em></p>
@@ -105,8 +92,7 @@
 <!-- If no comments -->
 <div class="row">
   <div class="col s12 center-align">
-    <h4>No one has added a comment yet - you can be the first!</h4
-      >
+    <h2 class="comment-sub-heading">No one has added a comment yet - you can be the first!</h2>
     <button class="btn-large waves-effect waves-light purple lighten-1 tooltipped" data-position="top" data-tooltip="You can add comments from the technology's card"><a class="white-text" href="{{ url_for('get_technologies') }}" >Add the first comment<i
       class="material-icons prefix">add_circle_outline</i></a></button>
   </div>
