--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h4 class="center-align">{{ page_title }}</h4>
+<h4 class="center-align general-title">{{ page_title }}</h1>
 
 <!-- Code for form from Materialize.com -->
 <div class="row">
@@ -16,7 +16,7 @@
                         class="validate" value="{{ category.category_name }}" placeholder="Name" required>
                     <label for="category_name">Category to edit</label>
                 </div>
-            </div>
+            </div1
 
             <!-- Submit button for adding a new category -->
             <div class="row">
