--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -21,13 +21,13 @@
             <!-- Submit button for adding a new category -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
-                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1"">
+                    <button type="submit" class="btn-large waves-effect waves-light purple lighten-1">
                         Edit this category's name now! <i class=" material-icons right">create</i>
                     </button>
 
                     <!-- Link as button to cancel and return to manage_categories -->
                     <a href="{{ url_for('manage_categories') }}"
-                        class="btn-large waves-effect waves-light purple lighten-1"">
+                        class="btn-large waves-effect waves-light purple lighten-1">
                         Cancel<i class=" material-icons right">close</i>
                     </a>
                 </div>
