--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,3 +103,17 @@ nav .brand-logo {
 #add-comment-title {
     font-size: 2rem;
 }
+/*-- Code from  https://css-tricks.com to style placeholder text --*/
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #000;
+  }
+  ::-moz-placeholder { /* Firefox 19+ */
+    color: #000;
+  }
+  :-ms-input-placeholder { /* IE 10+ */
+    color: #000;
+  }
+  :-moz-placeholder { /* Firefox 18- */
+    color: #000;
+  }
