--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -13,7 +13,7 @@
     <div class="row valign-wrapper center-align">
       <div class="input-field col s12">
         <i class="material-icons prefix">search</i>
-        <input type="text" name="query" id="query" minlength="3" class="validate">
+        <input type="text" name="query" id="query" placeholder="Keyword" minlength="3" class="validate">
         <label for="query">Search by keyword</label>
       </div>
     </div>
