--- a/templates/comments.html
+++ b/templates/comments.html
@@ -113,7 +113,8 @@
               back and
               browse all the technologies</a>
             <br>
-            <a class="btn-large purple lighten-1 tech-scroll" href="#page-top">Back to top</a>
+            <a class="btn-large purple lighten-1" id="comments-scroll" href="#page-top">Back to top</a>
+            
           </div>
         </div>
         </section>
