--- a/static/css/style.css
+++ b/static/css/style.css
@@ -83,7 +83,7 @@ nav .brand-logo {
 
 
 
-#tech-scroll, #profile-scroll, #comments-scroll {
+#tech-scroll, #profile-scroll,  {
     position: sticky;
     bottom: 0;
 }
@@ -112,4 +112,24 @@ nav .brand-logo {
 
   .col img {
       width: 100%;
+  }
+
+/* Code from https://www.w3schools.com/ */
+
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 0, 10px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+  }
+  
+  #myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
   }
