--- a/templates/comments.html
+++ b/templates/comments.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col m5">
 
-      <img src="{{ technology.technology_image }}" alt="">
+      <img src="{{ technology.technology_image }}" alt="Picture of technology">
     </div>
 
     <div class="col m5">
